--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,9 @@ task wrappers(type: Wrapper) {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-
 	implementation 'org.springframework.security:spring-security-crypto:6.0.1'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
